@@ -1,3 +1,4 @@
+6/19/14 Equation: replace overriding of getName with options.name
 6/19/14 #36 add credits for About dialog
 6/19/14 #33 disable the 'Check' button in the game when all coefficients are zero
 6/17/14 #42 add missing entries in images/license.txt
